--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/face-landmarks-detection": "1.0.2",
+    "@tensorflow-models/face-detection": "1.0.1",
+    "@tensorflow/tfjs": "3",
+    "@tensorflow/tfjs-backend-webgl": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
