--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "the-blind-museum",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
-    "@tensorflow-models/face-landmarks-detection": "1.0.2",
     "@tensorflow-models/face-detection": "1.0.1",
+    "@tensorflow-models/face-landmarks-detection": "1.0.2",
     "@tensorflow/tfjs": "3",
     "@tensorflow/tfjs-backend-webgl": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
