--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.6",
+    "@types/lodash": "^4.14.200",
+    "@types/lodash.debounce": "^4.0.8",
     "@types/node": "^20.8.9",
-    "@types/react": "^18.2.32",
+    "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
@@ -23,6 +25,9 @@
     "react-scripts": "5.0.1",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "predeploy": "npm run build",
