--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "baseui": "^13.0.0",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styletron-engine-atomic": "^1.6.2",
+    "styletron-react": "^6.1.1",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
